--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <title>Using Bio-Signals to Predict Smoker Status</title>
     </head>
     <body>
-        <p>I chose the following dataset: https://www.kaggle.com/datasets/gauravduttakiit/smoker-status-prediction-using-biosignals
-
+        <p>I chose the following dataset: https://www.kaggle.com/datasets/gauravduttakiit/smoker-status-prediction-using-biosignals.</p>
+        <hr>
+        <p>
         I decided on using this dataset because it provides over 55,000 rows of biological data, including bio-signals like the levels of 
         individual hormones and proteins, about both smokers and non-smokers. I am interested in determining if there are any strong trends 
         or clusters between any combination of these bio-signals and smoking. </p>
